[package]
name = "lab_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []
heap-profile = []
# TLSF-style (FL,SL) start + scan larger bins; **first** chain with any fit wins,
# best-fit **within that chain only**; on NoMemory runs **one** global best-fit fallback.
lab-scan-tlsf = []

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap"] }
